[package]
name = "byte_buffer"
version = "0.1.0"
authors = ["Аркадий Четвертановский <chetvertanovskiy@trueconf.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "byte_buffer"
path = "src/main.rs"

[lib]
name = "byte_buffer"
path = "src/lib.rs"

[dependencies]
